[package]
name = "ossim_oxide"
version = "0.1.0"
authors = ["DTCan <Dylan.Cannisi@digitalglobe.com>"]
edition = "2018"

[[bin]]
name = "ossim-info"
path = "src/apps/ossim_info.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.18"
image = "0.23.10"
jp2k = "0.3.1"
nom = "^5"